--- a/PROJECTS/P2PART1.html
+++ b/PROJECTS/P2PART1.html
@@ -288,7 +288,7 @@
                     Descompriman el zip que bajaron, y dentro de la carpeta descomprimida encontraran:
                     <br>
                     <ul class="w3-text w3-justify w3-large w3-margin-16">
-                        <li><b>Makefile: </b>archivo que define configuraciones para correr su programa (tamaño del sliding puzzle y el nivel de paralelismo a utilizar). Miren este archivo para ver como se corren los programas en Spark.</li>
+                        <li><b>Makefile: </b>archivo que define configuraciones para correr su programa (tamaño del sliding puzzle y el nivel de paralelismo a utilizar). Miren este archivo para ver como se corren los programas en Spark. Tambien tiene info de como pueden probarlo en sus compus.</li>
                         <li><b>Sliding.py: </b>implementación del juego sliding-puzzle.</li>
                         <li><b>SlidingBfsReference.py: </b>el algoritmo bfs genérico antes mencionado. Pueden usar este codigo para verificar si su respuesta producida por MapReduce es correcta.</li>
                         <li><b>SlidingBfsSpark.py: </b>El archivo que tienen que modificar. (Aquí van a poner su solucion de MapReduce)</li>
@@ -364,12 +364,12 @@
                     </ul>
                 </p>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
-                    <strong>Fecha de entrega: </strong>
+                    <strong>Fecha de entrega: (Pendiente) Semana despues de semana santa</strong>
                 </p>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
-                    Si tienen alguna pregunta, no duden en enviar un correo:
+                    Si tienen alguna pregunta, no duden en preguntar:
                     <br><br>
-                    <strong>Encargado de Proyecto: </strong> Andrés Castellanos - andres.cv@galileo.edu
+                    <strong>Encargado de Proyecto: </strong> Andrés Castellanos - andres.cv@galileo.edu, SLACK: andrescv
                 </p>
             </div>
             <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Notas</h1>
