--- a/PROJECTS/P2PART1.html
+++ b/PROJECTS/P2PART1.html
@@ -377,7 +377,7 @@
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     <h1 class="w3-light-grey w3-center">NOTAS DE PYTHON</h1><br>
                     <p class="w3-text w3-justify w3-large w3-margin-16">
-                    Probablemente nadie o muy pocos hayan programado en el lenguaje de programación de Python y no tengan mucha práctica con solo haber hecho un Lab, se recomienda que sigan este tutorial que no les va a quitar mucho tiempo y que les va a enseñar lo necesario para que hagan este proyecto.
+                    Probablemente nadie o muy pocos hayan programado en el lenguaje de programación de Python y no tengan mucha práctica con solo haber hecho un Lab, se recomienda que sigan este tutorial que no les va a quitar mucho tiempo y que les va a enseñar lo necesario para que hagan este proyecto. (Si quieren)
                      <a href="https://www.codecademy.com/learn/python"><span class="w3-btn w3-red w3-round">TUTORIAL</span></a>
                     </p>
                     <h1 class="w3-light-grey w3-center">NOTAS DE SPARK</h1><br>
