fecha de entrega P21

--- a/PROJECTS/P2PART1.html
+++ b/PROJECTS/P2PART1.html
@@ -364,7 +364,7 @@
                     </ul>
                 </p>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
-                    <strong>Fecha de entrega: (Pendiente) Semana despues de semana santa</strong>
+                    <strong>Fecha de entrega: Viernes 1 de Abril del 2016 a las 11:55 PM</strong>
                 </p>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Si tienen alguna pregunta, no duden en preguntar:
