--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="PROJECTS/P1_PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-1</span></a>
                     <a href="PROJECTS/P1_PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 1-2</span></a><br>
                     <a href="PROJECTS/P2PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-1</span></a>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-2</span></a><br>
+                    <a href="PROJECTS/P2PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-2</span></a><br>
                     <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 3</span></a>
                     <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 4</span></a>
                 </p>
