--- a/PROJECTS/P2PART2.html
+++ b/PROJECTS/P2PART2.html
@@ -589,6 +589,15 @@
 </pre>
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Intenten esto:
+                    <ol>
+                        <li class="w3-large">Bajen el siguiente script: <a href="#">resume.sh</a>.</li>
+                        <li class="w3-large">Ponganlo en la carpeta AWS.</li>
+                        <li class="w3-large">Abranlo y editenlo con las cosas que hicieron con los archivos anteriores para que funcione.</li>
+                        <li class="w3-large"><b>CTRL + c</b> en el terminal donde les sale el mensaje: para terminar el proceso.</li>
+                        <li class="w3-large"><b>bash resume.sh</b>, para continuar el proceso de instalacion del cluster.</li>
+                        <li class="w3-large">Esperar a que todo salga bien jaja sino repetir ??????.</li>
+                        <li class="w3-large">Sino avisar inmediatamente al encargado del proyecto para solucionarlo</li>
+                    </ol>
                 </p>
             </div>
         </div>
