--- a/PROJECTS/P2PART2.html
+++ b/PROJECTS/P2PART2.html
@@ -590,7 +590,7 @@
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Intenten esto:
                     <ol>
-                        <li class="w3-large">Bajen el siguiente script: <a href="#">resume.sh</a>.</li>
+                        <li class="w3-large">Bajen el siguiente script: <a href="https://www.dropbox.com/s/z0z3m7ml405wy7m/resume.sh?dl=1">resume.sh</a>.</li>
                         <li class="w3-large">Ponganlo en la carpeta AWS.</li>
                         <li class="w3-large">Abranlo y editenlo con las cosas que hicieron con los archivos anteriores para que funcione.</li>
                         <li class="w3-large"><b>CTRL + c</b> en el terminal donde les sale el mensaje: para terminar el proceso.</li>
