--- a/PROJECTS/P2PART1.html
+++ b/PROJECTS/P2PART1.html
@@ -360,7 +360,7 @@
 		La cantidad de lineas de su respuesta es correcta
 		Su respuesta hace match con la nuestra (es igual)
 		All Ok
-	
+
 
 		Tablero de: 3x3
 		-----------------
@@ -369,7 +369,7 @@
 		La cantidad de lineas de su respuesta es correcta
 		Su respuesta hace match con la nuestra (es igual)
 		All Ok
-	
+
 
 		Tablero de: 5x2
 		-----------------
@@ -405,7 +405,16 @@
                 <p class="w3-text w3-justify w3-large w3-margin-16">
                     Si tienen alguna pregunta, no duden en preguntar:
                     <br><br>
-                    <strong>Encargado de Proyecto: </strong> Andrés Castellanos - andres.cv@galileo.edu, SLACK: andrescv
+                    <strong>Encargado de Proyecto:</strong>
+                    <ul>
+                        <li>
+                            <strong>Secciones A, B y C: </strong>Andrés Castellanos - andres.cv@galileo.edu, SLACK: andrescv
+                        </li>
+                        <li>
+                            <strong>Sección AN: </strong>Luis Jimenez - luiscu@galileo.edu, SLACK: luiscu
+                        </li>
+                    </ul>
+
                 </p>
             </div>
             <h1 id="notas" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Notas</h1>
