modificado titulo PJ3

--- a/PROJECTS/P3.html
+++ b/PROJECTS/P3.html
@@ -14,7 +14,7 @@
     </nav>
 
 <div class="header">
-    <h1>CC3 2016 Proyecto 3: Performance Optimization - SSE/SIMD</h1>
+    <h1>CC3 2016 Proyecto 3: Performance Optimization - SSE/SIMD - OpenMp</h1>
     <big>Auxiliar: Ivan Juárez</big><br>
     <big><i>alexanderj@galileo.edu</i></big></div>
 
