--- a/PROJECTS/P3.html
+++ b/PROJECTS/P3.html
@@ -62,11 +62,9 @@ En el proyecto 1, usted escribió un programa que genera un mapa de profundidad 
 <h2>Parte 1</h2>
 
 <p>
-	Optimizar su generador de mapas de profundidad (depth map) utilizando cualquiera de las técnicas que ha aprendido <strong>a excepción de OpenMP</strong> (o cualquier otra librería de threads como pthreads, o cualquiera que use multiples núcleos). Para obtener su calificación completa, su programa necesita lograr un rendimiento promedio de <b>5.5</b> GFlop/s para varios tamaños de imágenes. El resultado debe seguir siendo correcto, y hemos proporcionado archivos para comprobar la exactitud de su código. Por favor, recuerde, sin embargo, que el código proporcionado <strong>no</strong> no es una garantía de la exactitud de su código y esperamos que usted ponga a prueba su propio código. El código que produzca una salida incorrecta será considerado funcionando con 0 GFlop/s para propósitos de calificación.</p>
+	Optimizar su generador de mapas de profundidad (depth map) utilizando cualquiera de las técnicas de paralelismo que ha aprendido incluyendo OpenMP (o cualquier otra librería de threads como pthreads, o cualquiera que use multiples núcleos). Para obtener su calificación completa, su programa necesita lograr un rendimiento promedio de <b>5.5</b> GFlop/s para varios tamaños de imágenes. El resultado debe seguir siendo correcto, y hemos proporcionado archivos para comprobar la exactitud de su código. Por favor, recuerde, sin embargo, que el código proporcionado <strong>no</strong> no es una garantía de la exactitud de su código y esperamos que usted ponga a prueba su propio código. El código que produzca una salida incorrecta será considerado funcionando con 0 GFlop/s para propósitos de calificación.</p>
 <p>
 	El código también será probado con diferentes parámetros (nada demasiado pequeño) y tiene que lograr un rendimiento medio de <b>4.0</b> GFlop/s.</p>
-<p>
- A modo de recordatorio, en la parte 1 <b>no está autorizado</b> el uso de OpenMP o cualquier otra librería de threading. El código que no cumpla este requisito no recibirá nota.</p>
 
 <h3>Empezando</h3>
 <p>Copie los archivos necesarios en su directorio de trabajo, introduciendo el siguiente comando:</p>
@@ -166,7 +164,7 @@ Antes de enviar, <b>asegúrese de probar su código en las máquinas del laborat
 <h3>Entrega</h3>
 
 <p>
-Debe enviar un correo a <i><font color = "blue">alexanderj@galileo.edu</font></i> indicando con quién trabajará <b>antes</b> del sábado 23 de abril, de lo contrario no se le asignará grupo en el GES.
+Se copiarán automáticamente los mismos grupos que para el PROYECTO1_1, por lo que se desea cambiar de pareja debe enviar un correo a <i><font color = "blue">alexanderj@galileo.edu</font></i> indicando con quién trabajará <b>antes</b> del sábado 23 de abril, de lo contrario no se le asignará grupo en el GES.
 El proyecto debe entregarse el lunes 2 de mayo antes de las 11:55 pm en el GES. Comprima <b>sólo</b> el archivo <code>calcDepthOptimized.c</code> en un archivo <b>.zip (no .tar o .rar)</b></p>
 
 </div>
