--- a/PROJECTS/P3.html
+++ b/PROJECTS/P3.html
@@ -163,7 +163,7 @@ Antes de enviar, <b>asegúrese de probar su código en las máquinas del laborat
 <h3>Entrega</h3>
 
 <p>
-Se copiarán automáticamente los mismos grupos que para el PROYECTO1_1, por lo que se desea cambiar de pareja debe enviar un correo a <i><font color = "blue">alexanderj@galileo.edu</font></i> indicando con quién trabajará <b>antes</b> del sábado 23 de abril, de lo contrario no se le asignará grupo en el GES.
+Se copiarán automáticamente los mismos grupos que para el PROYECTO1_1, por lo que si desea cambiar de pareja debe enviar un correo a <i><font color = "blue">alexanderj@galileo.edu</font></i> indicando con quién trabajará <b>antes</b> del sábado 23 de abril, de lo contrario no se le asignará grupo en el GES.
 El proyecto debe entregarse el lunes 2 de mayo antes de las 11:55 pm en el GES. Comprima <b>sólo</b> el archivo <code>calcDepthOptimized.c</code> en un archivo <b>.zip (no .tar o .rar)</b></p>
 
 </div>
