Proyecto 4 agregado. Falta fecha de entrega.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a href="PROJECTS/P2PART1.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-1</span></a>
                     <a href="PROJECTS/P2PART2.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 2-2</span></a><br>
                     <a href="PROJECTS/P3.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 3</span></a>
-                    <a href="javascript:void(0)"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 4</span></a>
+                    <a href="PROJECTS/P4.html"><span class="w3-btn w3-margin-4 w3-xlarge w3-teal w3-round-large">Proyecto 4</span></a>
                 </p>
             </div>
             <h1 id="horario" class="w3-card-24 w3-theme w3-round-large w3-padding-left w3-card-4">Horario</h1>
